[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menus/5-2.png" type="Texture2D" id=2]
[ext_resource path="res://Sprites/HUD/1-4.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Menus/5-1.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Objetos/Experiencia.png" type="Texture2D" id=5]
[ext_resource path="res://Fonts/monogram-extended.ttf" type="FontFile" id=6]
[ext_resource path="res://Sprites/Menus/new_theme.tres" type="Theme" id=7]
[ext_resource path="res://Sprites/Armas/Ametralladora/AmetralladoraReload.png" type="Texture2D" id=8]
[ext_resource path="res://Sprites/Armas/LanzaLlamas/LanzallamasReloadPNG.png" type="Texture2D" id=9]
[ext_resource path="res://Sprites/Armas/Sniper/SniperReloadIcon.png" type="Texture2D" id=10]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.027451, 0.596078, 0.611765, 1 )

[sub_resource type="FontFile" id=7]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="HUD" type="Control"]
anchor_left = -0.821
anchor_top = -0.685
anchor_right = -0.821
anchor_bottom = -0.685
offset_left = 1002.7
offset_top = 376.0
offset_right = 1758.7
offset_bottom = 834.0
pivot_offset = Vector2( 464, 281 )
theme = ExtResource( 7 )
script = ExtResource( 1 )

[node name="nombre" type="Label" parent="."]
visible = false
offset_left = 273.28
offset_top = 174.0
offset_right = 579.28
offset_bottom = 215.0
scale = Vector2( 0.7, 0.7 )
text = "cagada"
align = 1
valign = 1
autowrap = true

[node name="BarraVida" type="Sprite2D" parent="."]
position = Vector2( 384.892, 261.672 )
scale = Vector2( 0.3, 0.6 )
texture = ExtResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="BarraVida"]
anchor_right = 0.407
anchor_bottom = 0.755
offset_left = -70.0
offset_top = -3.0
offset_right = 10.171
offset_bottom = -6.06
theme = SubResource( 1 )
theme_override_styles/fg = SubResource( 2 )
theme_override_styles/bg = SubResource( 3 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Corazoncito" type="Sprite2D" parent="."]
position = Vector2( 358.58, 262.297 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="BarraEXP" type="Sprite2D" parent="."]
position = Vector2( 391.78, 32.5 )
scale = Vector2( 1.61659, 2.41667 )
texture = ExtResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="BarraEXP"]
offset_left = -220.0
offset_top = -3.0
offset_right = 220.0
offset_bottom = 3.0
theme = SubResource( 4 )
theme_override_styles/fg = SubResource( 5 )
step = 1.0
percent_visible = false

[node name="Experiencia" type="Sprite2D" parent="."]
position = Vector2( 16.2803, 30 )
scale = Vector2( 0.065, 0.065 )
texture = ExtResource( 5 )

[node name="lvl" type="Label" parent="."]
offset_left = 36.2798
offset_top = 7.0
offset_right = 81.2798
offset_bottom = 55.0
text = "LVL"
align = 1
valign = 1

[node name="numeroLVL" type="Label" parent="lvl"]
offset_left = 48.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 36.0
scale = Vector2( 1.02, 1 )
text = "1"

[node name="Game_timer" type="Timer" parent="."]

[node name="Timer" type="Label" parent="."]
offset_left = 326.28
offset_top = 60.0
offset_right = 439.28
offset_bottom = 86.0
align = 1
autowrap = true

[node name="Enemigos_vivos" type="Label" parent="."]
anchor_right = 0.361
offset_left = 504.004
offset_top = 423.0
offset_right = 502.83
offset_bottom = 436.0
theme_override_fonts/font = SubResource( 7 )
align = 1

[node name="Oleada" type="Label" parent="."]
offset_left = 282.28
offset_top = 413.0
offset_right = 366.28
offset_bottom = 439.0
text = "Oleada:"

[node name="value" type="Label" parent="Oleada"]
offset_left = 82.0
offset_right = 122.0
offset_bottom = 26.0
text = "0"

[node name="Nivel" type="Label" parent="."]
offset_left = 398.28
offset_top = 413.0
offset_right = 470.28
offset_bottom = 439.0
text = "Nivel:"

[node name="value" type="Label" parent="Nivel"]
offset_left = 71.0
offset_right = 111.0
offset_bottom = 26.0
text = "0"

[node name="reloadiconGun" type="Sprite2D" parent="."]
position = Vector2( 382.28, 156 )
scale = Vector2( 0.085, 0.085 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="reloadiconSniper" type="Sprite2D" parent="."]
position = Vector2( 462.28, 227 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="reloadiconLanzallamas" type="Sprite2D" parent="."]
position = Vector2( 308.28, 228 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="Game_timer" to="." method="_on_Game_timer_timeout"]
